# Agentic_AI

Bangla_Order_Parser_Project/: .gitignore  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
Bangla_Order_Parser_Project/.github/workflows/: tests.yml
Bangla_Order_Parser_Project/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
Bangla_Order_Parser_Project/app/api/: routes.py
Bangla_Order_Parser_Project/app/parsers/: __init__.py  factory.py  openai_parser.py  rule_based.py
Bangla_Order_Parser_Project/data/: sample_messages.json
Bangla_Order_Parser_Project/scripts/: seed_db.py
Bangla_Order_Parser_Project/tests/: conftest.py  test_api.py  test_parser.py  test_tools.py
factorylens-agentic-ai/: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  VALIDATION.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
factorylens-agentic-ai/app/: __init__.py  main.py  schemas.py
factorylens-agentic-ai/data/: README.md  source_manifest.json
factorylens-agentic-ai/docs/: api.md  architecture.md  dataset.md  scalability.md
factorylens-agentic-ai/scripts/: build_demo_index.py  download_dataset.py  generate_demo_data.py  prepare_dataset.py  validate_dataset.py
factorylens-agentic-ai/tests/: conftest.py  test_api.py  test_dataset_validator.py  test_manual_store.py  test_risk.py  test_vector_store.py  test_vision_demo.py
factorylens-agentic-ai/training/: benchmark_faiss.py  build_faiss_index.py  common.py  evaluate.py  register_model.py  train.py
(+75 files in other folders)
