[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "factorylens-agentic-ai"
version = "1.0.0"
description = "Industrial defect intelligence with transfer learning, FAISS, MLflow and LangGraph."
requires-python = ">=3.11,<3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_demo_index.py" = ["E402"]
